# more_pathlib

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  check_and_test.yml
more_pathlib/: __init__.py  common.py  copy.py  json.py  pickle.py  rm.py  validation.py
tests/: test_common.py  test_copy.py  test_rm.py  test_validation.py
